// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create user form should render correctly 1`] = `
<styled.div>
  <h1>
    Create user
  </h1>
  <ReactFinalForm
    onSubmit={[MockFunction]}
    render={[Function]}
  />
</styled.div>
`;

exports[`Update user form should render correctly 1`] = `
<styled.div>
  <h1>
    Update user
  </h1>
  <ReactFinalForm
    onSubmit={[MockFunction]}
    render={[Function]}
  />
</styled.div>
`;
